# synthread

./: .gitignore  Cargo.toml  README.md  build.sh  run-gui.sh
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
core/: Cargo.toml
core/src/: api.rs  dht.rs  identity.rs  lib.rs  network.rs  node.rs  peer.rs  plugin.rs
core/src/security/: encryption.rs  mod.rs  permission.rs  visibility.rs
docs/: api.md  architecture.md  pairing.md  security.md
frontends/api-client/: Cargo.toml
frontends/api-client/src/: lib.rs
frontends/gui/: CMakeLists.txt
frontends/gui/rust-bridge/: CMakeLists.txt
frontends/gui/src/: app.cpp  app.h  main.cpp  main.qml
frontends/headless/: Cargo.toml
frontends/headless/src/: main.rs
plugins/chat-dm/: Cargo.toml
plugins/chat-dm/src/: envelope.rs  lib.rs  routes.rs  store.rs
