[workspace]
resolver = "2"
members = [
    "core",
    "plugins/chat-dm",
    "frontends/api-client",
    "frontends/headless",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/asvanyviz/synthread"
authors = ["Minerva <asvanyviz@github.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"

# Random
rand = "0.8"

# Hashing
sha2 = "0.10"

# P2P
libp2p = { version = "0.54", features = [
    "tokio", "noise", "yamux", "tcp", "dns",
    "kad", "autonat", "relay", "identify",
    "ping", "macros", "tls",
] }

# HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Misc
base64 = "0.22"
hex = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = "0.1"
