[package]
name = "synthread-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
synthread-core = { path = "../../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { workspace = true }
base64 = { workspace = true }
