[package]
name = "synthread-headless"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "synthread"
path = "src/main.rs"

[dependencies]
synthread-core = { path = "../../core" }
synthread-chat-dm = { path = "../../plugins/chat-dm" }
synthread-api-client = { path = "../api-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
